--- a/test-analyzer-core/pom.xml
+++ b/test-analyzer-core/pom.xml
@@ -13,7 +13,25 @@
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals><goal>add-test-source</goal></goals>
+						<configuration>
+							<sources>
+								<source>src/test/resources</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 	<properties>
 		<rootFolder>${project.basedir}/../</rootFolder>
