--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.tum.in.niedermr.ta</groupId>
 	<artifactId>test-analyzer-parent</artifactId>
-	<version>${currentVersion}</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>TestAnalyzer Parent</name>
