--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.prefs
 *.project
 *.classpath
+/target/
 **/target/
 **/lib/archive/
 **/info/archive/
@@ -10,6 +11,7 @@
 *.log
 **/src/test/temp/
 /teamscale/backups
-/test-analyzer-core/src/test/data/JarIteratorTest/temp1.jar
-/test-analyzer-core/src/test/data/JarIteratorTest/temp2.jar
+/test-analyzer-core/src/test/data/JarIteratorTest/temp_1.jar
+/test-analyzer-core/src/test/data/JarIteratorTest/temp_2.jar
 /test-analyzer-test-int/src/test/program
+
