Format pom files

--- a/test-analyzer-core/pom.xml
+++ b/test-analyzer-core/pom.xml
@@ -21,7 +21,9 @@
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
-						<goals><goal>add-test-source</goal></goals>
+						<goals>
+							<goal>add-test-source</goal>
+						</goals>
 						<configuration>
 							<sources>
 								<source>src/test/resources</source>
