Improve maven files

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,8 @@
 	<properties>
 		<currentVersion>2.0.0-SNAPSHOT</currentVersion>
 		<rootFolder>${project.basedir}</rootFolder>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 	<dependencies>
