--- a/test-analyzer-core/pom.xml
+++ b/test-analyzer-core/pom.xml
@@ -18,6 +18,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.10</version>
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
