--- a/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
@@ -4,7 +4,7 @@ workingFolder=./src/test/temp/integrationtest7/
 codepathToMutate=../../.././test/data/common/jars/test-project.jar;
 codepathToTest=../../.././test/data/common/jars/test-project.jar;
 classpath=
-testWorkflows=de.tum.in.niedermr.ta.extensions.analysis.workflows.stackdistance.StackDistanceAnalysisWorkflow
+testWorkflows=de.tum.in.niedermr.ta.extensions.analysis.workflows.stackdistance.StackDistanceAnalysisWorkflow;de.tum.in.niedermr.ta.extensions.analysis.workflows.statistics.CodeStatisticsWorkflow
 testRunner=de.tum.in.niedermr.ta.core.code.tests.runner.junit.JUnitTestRunner
 methodFilters=de.tum.in.niedermr.ta.core.analysis.filter.advanced.SetterGetterFilter;
 returnValueGenerators=de.tum.in.niedermr.ta.core.analysis.mutation.returnvalues.VoidReturnValueGenerator;de.tum.in.niedermr.ta.core.analysis.mutation.returnvalues.SimpleReturnValueGeneratorWith0;de.tum.in.niedermr.ta.core.analysis.mutation.returnvalues.SimpleReturnValueGeneratorWith1
