--- a/test-analyzer-test-int/pom.xml
+++ b/test-analyzer-test-int/pom.xml
@@ -15,7 +15,7 @@
 
 	<properties>
 		<rootFolder>${project.basedir}/../</rootFolder>
-		<test.integration.pattern>**/*IntegrationTest*.java</test.integration.pattern>
+		<test.integration.pattern>**/IntegrationTest*.java</test.integration.pattern>
 		<test.program.path>${basedir}/src/test/program</test.program.path>
 	</properties>
 
