--- a/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
@@ -4,11 +4,11 @@ workingFolder=./src/test/temp/integrationtest7/
 codepathToMutate=../../.././test/data/common/jars/test-project.jar;
 codepathToTest=../../.././test/data/common/jars/test-project.jar;
 classpath=
-testWorkflows=de.tum.in.niedermr.ta.extensions.analysis.workflows.stackdistance.StackDistanceAnalysisWorkflow;de.tum.in.niedermr.ta.extensions.analysis.workflows.statistics.CodeStatisticsWorkflow
+testWorkflows=de.tum.in.niedermr.ta.extensions.analysis.workflows.stackdistance.StackDistanceAnalysisWorkflow;de.tum.in.niedermr.ta.extensions.analysis.workflows.statistics.CodeStatisticsWorkflow;de.tum.in.niedermr.ta.runner.analysis.workflow.TestWorkflow
 testRunner=de.tum.in.niedermr.ta.core.code.tests.runner.junit.JUnitTestRunner
 methodFilters=de.tum.in.niedermr.ta.core.analysis.filter.advanced.SetterGetterFilter;
 returnValueGenerators=de.tum.in.niedermr.ta.core.analysis.mutation.returnvalues.VoidReturnValueGenerator;de.tum.in.niedermr.ta.core.analysis.mutation.returnvalues.SimpleReturnValueGeneratorWith0;de.tum.in.niedermr.ta.core.analysis.mutation.returnvalues.SimpleReturnValueGeneratorWith1
-resultPresentation=TEXT
+resultPresentation=DB
 testClassIncludes=^de\.tum\.in\.ma\.simpleproject\.core.*
 testClassExcludes=
 testingTimeoutConstant=15
