--- a/test-analyzer-extensions/pom.xml
+++ b/test-analyzer-extensions/pom.xml
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>6.9.10</version>
+			<version>${testng.version}</version>
 		</dependency>
 	</dependencies>
 
