Extensions: added src/test/resources folder

--- a/test-analyzer-extensions/pom.xml
+++ b/test-analyzer-extensions/pom.xml
@@ -19,6 +19,26 @@
 
 	<build>
 		<plugins>
+		
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.10</version>
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-test-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>src/test/resources</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+	
 			<plugin>
 				<!-- Needed so that (only) JUnit tests get executed (otherwise testNg 
 					is used because of the dependency) -->
