Extended integration test 7

--- a/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
@@ -7,6 +7,7 @@ classpath=
 testWorkflows =de.tum.in.niedermr.ta.extensions.analysis.workflows.stackdistance.StackDistanceAnalysisWorkflow;
 testWorkflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.statistics.CodeStatisticsWorkflow;
 testWorkflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.coverage.CoverageParserWorkflow;
+testWorkflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.methodsignature.ReturnTypeCollectorWorkflow;
 testWorkflows+=de.tum.in.niedermr.ta.runner.analysis.workflow.TestWorkflow;
 testRunner=de.tum.in.niedermr.ta.core.code.tests.runner.junit.JUnitTestRunner
 methodFilters=de.tum.in.niedermr.ta.core.analysis.filter.advanced.SetterGetterFilter;
