--- a/test-analyzer-extensions/pom.xml
+++ b/test-analyzer-extensions/pom.xml
@@ -75,6 +75,14 @@
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>de.tum.in.niedermr.ta</groupId>
+			<artifactId>test-analyzer-runner</artifactId>
+			<version>${currentVersion}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.testng</groupId>
