--- a/test-analyzer-test-int/src/test/data/integrationtest3/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest3/configuration/config.config
@@ -16,6 +16,5 @@ testingTimeoutPerTestcase=10
 testingTimeoutAbsoluteMax=-1
 operateFaultTolerant=false
 numberOfThreads=4
-executeCollectInformation=false
-executeMutateAndTest=true
 removeTempData=true
+advanced.testworkflow.collectInformation=false
