--- a/test-analyzer-test-int/src/test/data/integrationtest3/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest3/configuration/config.config
@@ -18,3 +18,4 @@ operateFaultTolerant=false
 numberOfThreads=4
 removeTempData=true
 advanced.testworkflow.collectInformation=false
+advanced.executionId=TEST
