--- a/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
@@ -8,7 +8,7 @@ testWorkflows =de.tum.in.niedermr.ta.extensions.analysis.workflows.stackdistance
 testWorkflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.statistics.CodeStatisticsWorkflow;
 testWorkflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.coverage.CoverageParserWorkflow;
 testWorkflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.methodsignature.ReturnTypeCollectorWorkflow;
-testWorkflows+=de.tum.in.niedermr.ta.runner.analysis.workflow.TestWorkflow;
+testWorkflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.testworkflow.TestWorkflowForHugeData;
 testRunner=de.tum.in.niedermr.ta.core.code.tests.runner.junit.JUnitTestRunner
 methodFilters=de.tum.in.niedermr.ta.core.analysis.filter.advanced.SetterGetterFilter;
 returnValueGenerators=de.tum.in.niedermr.ta.core.analysis.mutation.returnvalues.VoidReturnValueGenerator;de.tum.in.niedermr.ta.core.analysis.mutation.returnvalues.SimpleReturnValueGeneratorWith0;de.tum.in.niedermr.ta.core.analysis.mutation.returnvalues.SimpleReturnValueGeneratorWith1
