Integration tests: adjust special system test data and expected results

--- a/test-analyzer-test-int/src/test/data/integrationtest5/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest5/configuration/config.config
@@ -10,7 +10,7 @@ methodFilters=
 returnValueGenerators=de.tum.in.niedermr.ta.core.analysis.mutation.returnvalues.VoidReturnValueGenerator;de.tum.in.niedermr.ta.core.analysis.mutation.returnvalues.SimpleReturnValueGeneratorWith0;de.tum.in.niedermr.ta.core.analysis.mutation.returnvalues.SimpleReturnValueGeneratorWith1;de.tum.in.niedermr.ta.extensions.analysis.mutation.returnvalues.CommonInstancesReturnValueGenerator
 resultPresentation=DB
 testClassIncludes=^de\.tum\.in\.ma\.simpleproject\.special.*
-testClassExcludes=
+testClassExcludes=.*MultiThread.*
 testingTimeoutConstant=5
 testingTimeoutPerTestcase=5
 testingTimeoutAbsoluteMax=10
