--- a/test-analyzer-runner/sample/sample-configuration.config
+++ b/test-analyzer-runner/sample/sample-configuration.config
@@ -10,7 +10,7 @@ codepathToMutate=./sample-project/jars/application.jar;
 # Jar files with test cases (may overlap / be equal to codePathToMutate) (can be specified relative to the working folder)
 codepathToTest=./sample-project/jars/application-tests.jar;
 
-# Further needed dependencies
+# Further needed dependencies (hint: see test-analyzer-runner/utilities/ClasspathHelp.java)
 classpath=./sample-project/jars/dependency-1.jar;./sample-project/jars/dependency-2.jar;
 
 # Extension that contains further workflows (will be located in test-analyzer-extensions/target after a Maven build)
