Rename advanced configuration key to set the execution id

--- a/test-analyzer-test-int/src/test/data/integrationtest1/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest1/configuration/config.config
@@ -17,4 +17,4 @@ testingTimeoutAbsoluteMax=-1
 operateFaultTolerant=false
 numberOfThreads=1
 removeTempData=true
-advanced.executionId=TEST
+advanced.executionId.value=TEST
