--- a/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
@@ -22,7 +22,7 @@ testingTimeoutAbsoluteMax=-1
 operateFaultTolerant=false
 numberOfThreads=1
 removeTempData=true
-advanced.executionId=TEST
+advanced.executionId.value=TEST
 extension.methodsignature.returnvalue.suppressSupportedTypes=true
 extension.methodsignature.returnvalue.existingFactories=de.tum.in.niedermr.ta.extensions.analysis.mutation.returnvalues.CommonReturnValueFactory
 extension.methodsignature.returnvalue.outputFormat=CODE
