--- a/test-analyzer-test-int/src/test/data/integrationtest5/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest5/configuration/config.config
@@ -17,4 +17,4 @@ testingTimeoutAbsoluteMax=10
 operateFaultTolerant=false
 numberOfThreads=4
 removeTempData=true
-advanced.executionId=TEST
+advanced.executionId.value=TEST
