--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,5 @@
 /test-analyzer-core/src/test/data/JarIteratorTest/temp_1.jar
 /test-analyzer-core/src/test/data/JarIteratorTest/temp_2.jar
 /test-analyzer-test-int/src/test/program
+/test-analyzer-test-int/src/test/coverage
 /test-analyzer-utilities/
