Stack distance workflows: package refactoring

--- a/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
@@ -4,7 +4,7 @@ workingFolder=./src/test/temp/integrationtest7/
 codepathToMutate=../../.././test/data/common/jars/test-project.jar;
 codepathToTest=../../.././test/data/common/jars/test-project.jar;
 classpath=
-workflows =de.tum.in.niedermr.ta.extensions.analysis.workflows.stackdistance.StackDistanceAnalysisWorkflow;
+workflows =de.tum.in.niedermr.ta.extensions.analysis.workflows.stackdistance.v1.StackDistanceAnalysisWorkflowV1;
 workflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.statistics.CodeStatisticsWorkflow;
 workflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.coverage.CoverageParserWorkflow;
 workflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.methodsignature.ReturnTypeCollectorWorkflow;
