--- a/test-analyzer-test-int/src/test/data/integrationtest8/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest8/configuration/config.config
@@ -4,7 +4,7 @@ workingFolder=./src/test/temp/integrationtest7/
 codepathToMutate=../../.././test/data/common/jars/test-project.jar;
 codepathToTest=../../.././test/data/common/jars/test-project.jar;
 classpath=
-testWorkflows =de.tum.in.niedermr.ta.extensions.analysis.workflows.stackdistance2.StackDistanceAnalysisWorkflowV2;
+testWorkflows =de.tum.in.niedermr.ta.extensions.analysis.workflows.stackdistance.v2.StackDistanceAnalysisWorkflowV2;
 testRunner=de.tum.in.niedermr.ta.core.code.tests.runner.junit.JUnitTestRunner
 resultPresentation=DB
 testClassIncludes=^de\.tum\.in\.ma\.simpleproject\.special\.MultiThreadingTests.*
