Activate JaCoCo for all integration tests

--- a/test-analyzer-test-int/src/test/data/integrationtest3/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest3/configuration/config.config
@@ -19,3 +19,5 @@ numberOfThreads=4
 removeTempData=true
 advanced.testworkflow.collectInformation=false
 advanced.executionId.value=TEST
+extension.integrationTest.jacoco.enabled=true
+extension.integrationTest.jacoco.agent=D:/Tools/jacoco/lib/jacocoagent.jar
