--- a/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
@@ -27,3 +27,5 @@ extension.methodsignature.returnvalue.suppressSupportedTypes=true
 extension.methodsignature.returnvalue.existingFactories=de.tum.in.niedermr.ta.extensions.analysis.mutation.returnvalues.CommonReturnValueFactory
 extension.methodsignature.returnvalue.outputFormat=CODE
 extension.methodsignature.returnvalue.excludeWrapperAndString=true
+extension.integrationTest.jacoco.enabled=true
+extension.integrationTest.jacoco.agent=D:/Tools/jacoco/lib/jacocoagent.jar
