--- a/test-analyzer-test-int/src/test/data/integrationtest5/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest5/configuration/config.config
@@ -18,3 +18,5 @@ operateFaultTolerant=false
 numberOfThreads=4
 removeTempData=true
 advanced.executionId.value=TEST
+extension.integrationTest.jacoco.enabled=true
+extension.integrationTest.jacoco.agent=D:/Tools/jacoco/lib/jacocoagent.jar
