IntegrationTest7: use PitOutputConverterWorkflow

--- a/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
+++ b/test-analyzer-test-int/src/test/data/integrationtest7/configuration/config.config
@@ -9,6 +9,7 @@ workflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.statistics.CodeSt
 workflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.coverage.CoverageParserWorkflow;
 workflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.methodsignature.ReturnTypeCollectorWorkflow;
 workflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.testworkflow.TestWorkflowForHugeData;
+workflows+=de.tum.in.niedermr.ta.extensions.analysis.workflows.converter.pit.PitOutputConverterWorkflow;
 factoryClass=de.tum.in.niedermr.ta.runner.factory.DefaultFactory
 testRunner=de.tum.in.niedermr.ta.core.code.tests.runner.junit.JUnitTestRunner
 methodFilters=de.tum.in.niedermr.ta.core.analysis.filter.advanced.SetterGetterFilter;
