--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.tum.in.niedermr.ta</groupId>
 	<artifactId>test-analyzer-parent</artifactId>
-	<version>2.0.0</version>
+	<version>2.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>TestAnalyzer Parent</name>
@@ -45,7 +45,7 @@
 	</build>
 
 	<properties>
-		<currentVersion>2.0.0</currentVersion>
+		<currentVersion>2.1.0-SNAPSHOT</currentVersion>
 		<rootFolder>${project.basedir}</rootFolder>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
