--- a/test-analyzer-runner/pom.xml
+++ b/test-analyzer-runner/pom.xml
@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>de.tum.in.niedermr.ta</groupId>
 		<artifactId>test-analyzer-parent</artifactId>
-		<version>2.0.0</version>
+		<version>2.1.0-SNAPSHOT</version>
 	</parent>
 	
 	<build>
