--- a/pom.xml
+++ b/pom.xml
@@ -46,17 +46,34 @@
 			  <artifactId>jacoco-maven-plugin</artifactId>
 			  <version>0.7.9</version>
 			  <executions>
+				
 				<execution>
 					<goals>
 						<goal>prepare-agent</goal>
 					</goals>
 				</execution>
+				
 				<execution>
 					<id>report</id>
 					<goals>
 						<goal>report</goal>
 					</goals>
 				</execution>
+				
+				<execution>
+					<id>prepare-agent-integration</id>
+					<goals>
+						<goal>prepare-agent-integration</goal>
+					</goals>
+				</execution>
+				
+				<execution>
+					<id>report-integration</id>
+					<goals>
+						<goal>report-integration</goal>
+					</goals>
+				</execution>
+				
 			  </executions>
 			</plugin>
 			
