--- a/pom.xml
+++ b/pom.xml
@@ -81,17 +81,20 @@
 	</build>
 
 	<properties>
-		<currentVersion>2.1.0-SNAPSHOT</currentVersion>
-		<rootFolder>${project.basedir}</rootFolder>
+		<!-- maven properties -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		
-        <!-- dependency versions -->
+		<!-- custom properties -->
+		<currentVersion>2.1.0-SNAPSHOT</currentVersion>
+		<rootFolder>${project.basedir}</rootFolder>
+		
+		<!-- dependency versions -->
 		<junit.version>4.12</junit.version>
 		<testng.version>6.9.10</testng.version>
 		<commons.io.version>2.4</commons.io.version>
 		<asm.version>5.2</asm.version>
-        <log4j2.version>2.6.2</log4j2.version>
+		<log4j2.version>2.6.2</log4j2.version>
 		<conqat.commons.version>1.0</conqat.commons.version>
 	</properties>
 	
