--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>test-analyzer-runner</module>
 		<module>test-analyzer-sdist</module>
 		<module>test-analyzer-extensions</module>
+		<module>test-analyzer-sdist-maven</module>
 		<module>test-analyzer-test-int</module>
 	</modules>
 
