--- a/test-analyzer-sdist-maven/pom.xml
+++ b/test-analyzer-sdist-maven/pom.xml
@@ -15,6 +15,7 @@
 
 	<properties>
 		<rootFolder>${project.basedir}/../</rootFolder>
+		<maven.version>2.2.1</maven.version>
 	</properties>
 
 	<build>
@@ -37,10 +38,22 @@
 
 		<dependency>
 			<groupId>org.apache.maven</groupId>
-			<artifactId>maven-core</artifactId>
-			<version>3.5.2</version> 
+			<artifactId>maven-artifact</artifactId>
+			<version>${maven.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-project</artifactId>
+			<version>${maven.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+			<version>${maven.version}</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.maven.plugin-tools</groupId>
 			<artifactId>maven-plugin-annotations</artifactId>
