pom.xml: added comment

--- a/test-analyzer-sdist-maven/pom.xml
+++ b/test-analyzer-sdist-maven/pom.xml
@@ -14,6 +14,7 @@
 	</parent>
 
 	<properties>
+		<!-- Must be set as absolute path. -->
 		<rootFolder>${project.basedir}/../</rootFolder>
 		<maven.version>2.2.1</maven.version>
 	</properties>
