--- a/test-analyzer-sdist-maven/pom.xml
+++ b/test-analyzer-sdist-maven/pom.xml
@@ -20,6 +20,11 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<version>3.5.2</version>
+			</plugin>
 		</plugins>
 	</build>
 
