--- a/test-analyzer-extensions/pom.xml
+++ b/test-analyzer-extensions/pom.xml
@@ -93,6 +93,7 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>${testng.version}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
