--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /test-analyzer-test-int/src/test/program
 /test-analyzer-test-int/src/test/coverage
 /test-analyzer-utilities/
+/other/not-versioned
