--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.tum.in.niedermr.ta</groupId>
 	<artifactId>test-analyzer-parent</artifactId>
-	<version>2.1.0-SNAPSHOT</version>
+	<version>2.1.0</version>
 	<packaging>pom</packaging>
 
 	<name>TestAnalyzer Parent</name>
@@ -26,7 +26,7 @@
 		<downloadJavadocs>true</downloadJavadocs>
 
 		<!-- custom properties -->
-		<currentVersion>2.1.0-SNAPSHOT</currentVersion>
+		<currentVersion>2.1.0</currentVersion>
 		
 		<!-- dependency versions -->
 		<junit.version>4.12</junit.version>
